// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OperativeList component should render operative list, each as an individual link 1`] = `
<DocumentFragment>
  <h4
    class="lbh-heading-h4"
  >
    Operatives
  </h4>
  <ol
    class="govuk-list govuk-!-margin-top-6 govuk-!-margin-bottom-9"
  >
    <li>
      <a
        class="govuk-link"
        href="/work-orders/10000621/operatives/edit"
      >
        Test1 - 50%
      </a>
    </li>
    <li>
      <a
        class="govuk-link"
        href="/work-orders/10000621/operatives/edit"
      >
        Test2 - 100%
      </a>
    </li>
  </ol>
</DocumentFragment>
`;

exports[`OperativeList component should render operative list, without links 1`] = `
<DocumentFragment>
  <h4
    class="lbh-heading-h4"
  >
    Operatives
  </h4>
  <ol
    class="govuk-list govuk-!-margin-top-6 govuk-!-margin-bottom-9"
  >
    <li>
      Test1 - 50%
    </li>
    <li>
      Test2 - 100%
    </li>
  </ol>
</DocumentFragment>
`;
